# Skript-Growtopia-Proxy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py  config.json  licenses.json  version.rc
lib/enet/: CMakeLists.txt  win32.c
scripts/: growscan.lua  pathfinding.lua
src/: CMakeLists.txt  main.cpp  pch.h  proxy_imgui_gui.cpp  proxy_imgui_gui.hpp
src/client/: client.cpp  client.hpp
src/core/: auth.cpp  auth.hpp  config.cpp  config.hpp  core.cpp  core.hpp  hosts_manager.hpp  logger.hpp
src/extension/: extension.hpp  lua_scripting_extension.hpp  packet_filter_extension.hpp  packet_interceptor_extension.hpp  world_logger_extension.hpp
src/extension/autocrime/: autocrime_extension.hpp
src/extension/autosurg/: autosurg_extension.hpp
src/extension/command_handler/: admin_command.cpp  admin_command.hpp  autocollect_command.cpp  autocollect_command.hpp  autocomp_command.cpp  autocomp_command.hpp  autocrime_command.cpp  autocrime_command.hpp  autosurg_command.cpp  autosurg_command.hpp  banall_command.cpp  banall_command.hpp  banfire_command.cpp  banfire_command.hpp  bank_check_command.cpp  bank_check_command.hpp  bank_command.cpp  bank_command.hpp  bank_withdraw_command.cpp  bank_withdraw_command.hpp  bankadd_command.hpp  buy_command.cpp  buy_command.hpp  clearclothes_command.cpp  clearclothes_command.hpp  cleartitle_command.cpp  cleartitle_command.hpp  clothes_command.cpp  clothes_command.hpp  command_base.cpp  command_base.hpp  command_handler_impl.hpp  dat_command.cpp  dat_command.hpp  dbox_command.cpp  dbox_command.hpp  devicecheck_command.cpp  devicecheck_command.hpp  door_command.cpp  door_command.hpp  (+94 more)
src/extension/item_finder/: README.md  item_finder.hpp  item_finder_extension.hpp
src/extension/join_mode/: join_mode_extension.hpp
src/extension/parser/: parser_impl.hpp
src/extension/player_state_tracker/: player_state_tracker.hpp  player_state_tracker_impl.hpp
src/extension/vending_fast/: vending_fast_extension.hpp
src/extension/vendsafe/: vendsafe_extension.hpp
src/extension/web_server/: web_server_impl.hpp
src/packet/: filter.cpp  filter.hpp  packet_helper.hpp  packet_variant.hpp  tank_packet.hpp
src/packet/game/: core.hpp
src/packet/message/: chat.hpp  core.hpp
src/player/: player.cpp  player.hpp
src/server/: server.cpp  server.hpp
src/utils/: antidebug.cpp  antidebug.hpp  api_client.hpp  astar_pathfinder.hpp  astar_pathfinding.hpp  byte_stream.hpp  construct_at_fix.h  discord_presence.cpp  discord_presence.hpp  display_manager.hpp  event_manager.hpp  extra_tile_data.h  gui_sink.hpp  hash.hpp  inventory_manager.hpp  login_tracker.hpp  lua_bridge.hpp  lua_manager.hpp  packet_utils.hpp  player_tracker.cpp  player_tracker.hpp  proxy_logger.hpp  randutils.hpp  socks5_socket.hpp  socks5_tunnel.hpp  strenc.hpp  text_parse.hpp  vend_logs_store.hpp  world_info.cpp  world_info.h  world_logger.cpp  world_logger.hpp  world_manager.hpp  world_parser_v2.cpp  world_parser_v2.h  world_players.cpp  world_players.hpp  world_tile.h
